			Java Electric change log

NOTE: Please place changes under the version that will be released next.

************************* Version 8.02k: *********************************

IMP: (04/19/05, JKG) Changed minimum resolution of IRSIM simulations from 10ps to 1ps

BUG: (04/19/05, GVG) Crash in 3D View if transistor has more than 2 active physical layers.
FIX: Ignore layer if there are already 2 defined.

IMP/MAN: (04/19/05, SMR) Added mnemonic characters to the entire menu.

IMP/MAN: (04/19/05, SMR) Added technology editor (commands under Edit / Technology Specific).

BUG: (04/18/05, GVG) Bug introduced in DRC while extending foundries (Bug #265)
FIX: Detect old style in format (Byte) and then makes the transition.

BUG: (04/15/05, SMR) JELIB output does not always get the type of variable arrays if the first entry is null.
FIX: In output.JELIB.makeString(), determine the type of the array, not the first entry.

IMP: (04/18/05, DN) Global-Partition schematic primitive is handled by HierarchicalEnumerator.
     Spice netlister tries to handle it too when Spice.USE_GLOBALS = false

BUG: (04/18/05, DN) List Export on Network command causes StackOverflowError (Bug #263).
FIX: In "ToolMenu.findPortsUp" don't add "listedExports" HashSet to itself.

IMP: (04/15/05, GVG) GDS ouput still writing text associated to exports even if WriteExportPins is off.

BUG: (04/15/05, GVG) Autoadvance flag in IRSIM tab wronlgy set based on "resimulate each" flag,
no setting of skillGDSNameLimit in Skill tab and wrong comparison of globalTextScale in TextTab.

IMP/MAN: (04/14/05, GVG) Ability to choose technology while creating a new cell (Bug #245)

IMP/MAN: (04/14/05, GVG) Changes in TSM90 and DRC to handle multiple foundries (ST, TSMC). DRC rules
are chosen depending on foundry selected: ST, TSMC, Combined(ST, TSMC). Names/Values for some DRC rules
varie according to foundry (eg. VT{H/L}_{P/N}.S.2/VT{H/L}_{P/N}.D.2). Added corresponding ST rules.